--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html" title="Jefferson"><img src="../img/loho.png" alt=""></a>
+          <a class="navbar-brand" href="index.html" title="Jefferson"></a>
         </div>
 
         <div id="navbar-collapse" class="navbar-collapse collapse">
