--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <section class="flexslider" data-section="welcome">
       <ul class="slides">
-        <li style="background-image: url(img/1.jpg)" class="overlay" data-stellar-background-ratio="0.5">
+        <li style="background-image: url(img/c.jpg)" class="overlay" data-stellar-background-ratio="0.5">
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
@@ -55,7 +55,7 @@
             </div>
           </div>
         </li>
-        <li style="background-image: url(img/2.jpg)" class="overlay">
+        <li style="background-image: url(img/d.jpg)" class="overlay">
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
