--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <h1 class="primary-heading">Discover</h1>
               <h3 class="secondary-heading">The journey</h3>
               <span class="seperator">* * *</span>
-            </div>
+            </div class="para">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <p><a href="#" class="Jefferson-custom-link">About Us</a></p>
           </div>
@@ -132,7 +132,7 @@
               <figure><img src="img/l.jpg" alt="Free Bootstrap Template by Jefferson.com"></figure>
               <div class="text">
                 <h3><a href="#">Design is a journey of discovery</a></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
+                <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
                 <p class=""><a href="#" class="Jefferson-custom-link link-sm">Read More</a></p>
               </div>
             </div>
@@ -142,7 +142,7 @@
               <figure><img src="img/n.jpg" alt="Free Bootstrap Template by Jefferson.com"></figure>
               <div class="text">
                 <h3><a href="#"></a>Design is a journey of discovery</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
+                <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
                 <p class=""><a href="#" class="Jefferson-custom-link link-sm">Read More</a></p>
               </div>
             </div>
@@ -152,7 +152,7 @@
               <figure><img src="img/t.jpg" alt="Free Bootstrap Template by Jefferson.com"></figure>
               <div class="text">
                 <h3><a href="#">Design is a journey of discoverys</a></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
+                <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
                 <p class=""><a href="#" class="Jefferson-custom-link link-sm">Read More</a></p>
               </div>
             </div>
@@ -186,7 +186,7 @@
             <div class="Jefferson-heading dark">
               <h1 class="primary-heading">Contact</h1>
               <h3 class="secondary-heading">Let's Chat</h3>
-            </div>
+            </div class="para">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
           <div class="col-md-6 col-md-push-1 Jefferson-animate">
